# arch-conscience

./: .env.example  .gitignore  HANDOFF.md  LICENSE  Procfile  QUICK_EVAL.md  README.md  pyproject.toml  requirements.txt
adrs/: adr-001.md
app/: adr_drafter.py  config.py  corpus.py  detect.py  extract.py  format_detect.py  gap_log.py  ingest.py  main.py  mcp_server.py  normalize.py  notify.py  preprocess.py  router.py  rules_bridge.py
app/llm/: __init__.py  base.py  provider.py
scripts/: check_health.py  ingest_rules.py  run_ingest.py  simulate_pr.py
test-files/: conduit-app-CLAUDE.md
tests/: conftest.py  test_e2e.py  test_extract.py  test_mcp.py  test_normalize.py  test_notify.py  test_preprocess.py  test_rules_bridge.py  test_smoke.py
tmp/: test-rules.md
